Closed Bug 1198157 Opened 10 years ago Closed 10 years ago

Intermittent dom/media/test/test_mediarecorder_record_getdata_afterstart.html | Test timed out.

Categories

(Core :: Audio/Video: Recording, defect, P3)

Unspecified
Gonk (Firefox OS)
defect

Tracking

()

RESOLVED FIXED
mozilla46
Tracking Status
firefox43 --- affected
firefox46 --- fixed

People

(Reporter: nigelb, Assigned: bechen)

References

()

Details

(Keywords: intermittent-failure)

Attachments

(1 file)

No description provided.
Depends on: 1197669
Assignee: nobody → bechen
Benjamin - are you planning to work on this? Do you have any thoughts about why it's timing out? For example, this could be a bug in the test, such as a source video finishing playing before the recording starts, or that sort of timing race. Thanks!
Flags: needinfo?(bechen)
Note: b2g emulator only
Rank: 35
OS: Unspecified → Gonk (Firefox OS)
Priority: -- → P3
(In reply to Randell Jesup [:jesup] from comment #81) > Benjamin - are you planning to work on this? Do you have any thoughts > about why it's timing out? > For example, this could be a bug in the test, such as a source video > finishing playing before the recording starts, or that sort of timing race. > Thanks! I believe the root cause is very similar to Bug 991776 comment 53. The encoder receive nothing or receive "blank data" (black screen frame, zero channel audio data) makes the encoder can not be initialized. And it usually occurs on the testcase which testing the small file. So at bug 991776 I only make the testing file loop, not really fix this issue. I'll try bug 991776 comment 52 to reproduce it first then think about how to fix it in gecko.
Flags: needinfo?(bechen)
See Also: → 991776
Comment on attachment 8704070 [details] MozReview Request: Bug 1198157: Call |NotifyEndOfStream| if the encoder can't been initialized after 30 seconds. r=jwwang https://reviewboard.mozilla.org/r/29553/#review26495 ::: dom/media/encoder/TrackEncoder.cpp:79 (Diff revision 1) > + mNotInitDuration += aQueuedMedia.GetDuration(); The type of mNotInitDuration should be StreamTime.
Attachment #8704070 - Flags: review?(jwwang) → review+
Comment on attachment 8704070 [details] MozReview Request: Bug 1198157: Call |NotifyEndOfStream| if the encoder can't been initialized after 30 seconds. r=jwwang https://reviewboard.mozilla.org/r/29553/#review26505
Attachment #8704070 - Flags: review+
Comment on attachment 8704070 [details] MozReview Request: Bug 1198157: Call |NotifyEndOfStream| if the encoder can't been initialized after 30 seconds. r=jwwang Review request updated; see interdiff: https://reviewboard.mozilla.org/r/29553/diff/1-2/
Attachment #8704070 - Attachment description: MozReview Request: Bug 1198157: Call |NotifyEndOfStream| if the encoder can't been initialized after 30 seconds. r? → MozReview Request: Bug 1198157: Call |NotifyEndOfStream| if the encoder can't been initialized after 30 seconds. r=jwwang
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla46
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: